# embedded-toolkit

./: Dockerfile  README.md  README_init.md  pyproject.toml
.github/workflows/: ci.yml
embedded_toolkit/: __init__.py  crc.py  filters.py  framing.py  pid.py
tests/: test_crc.py  test_filters.py  test_framing.py  test_pid.py
